[package]
name = "imgui-sdl2"
description = "SDL2 Input handling for imgui-rs"
version = "0.15.3"
authors = ["Michael Fairley <michael@michaelfairley.com>"]
homepage = "https://github.com/michaelfairley/rust-imgui-sdl2"
repository = "https://github.com/michaelfairley/rust-imgui-sdl2"
readme = "README.md"
categories = ["gui"]
license = "MIT/Apache-2.0"

[dependencies]
imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
sdl2 = "0.37"

[dev-dependencies]
gl = "0.14.0"
imgui-opengl-renderer = { git = "https://github.com/novara754/rust-imgui-opengl-renderer" }
